<resources>
    <string name="app_name">Basic Banking System</string>
    <string name="welcome_to">Welcome to</string>
    <string name="users">Users</string>
    <string name="transactions">Transactions</string>
    <string name="todo">TODO</string>
    <string name="name">Kanuri Teja Sai Vamsi</string>
    <string name="account_balance">Account Balance -</string>
    <string name="_1000">₹1000</string>
    <string name="email_id">Email ID -</string>
    <string name="mail_id">vamsi200212@gmail.com</string>
    <string name="gender">Gender -</string>
    <string name="male">Male</string>
    <string name="transfer_money">Transfer money</string>
    <string name="transfer_now">Transfer Now</string>
    <string name="big_name">Munagala Akshay Kumar</string>
    <string name="all_transactions">All Transactions</string>
    <string name="transaction_amount">Transaction Amount -</string>
    <string name="transaction_success">Transaction Success</string>
    <string name="transaction_successful">Transaction Successful</string>
</resources>