<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeparateUserActivity">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/img_gender"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.15"
        android:padding="12dp"
        android:background="@drawable/circle_shape"
        android:src="@drawable/man"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:fontFamily="@font/dm_sans_medium"
        android:textColor="#222121"
        android:textStyle="normal"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/img_gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0.001dp"
        app:layout_constraintLeft_toLeftOf="@id/name"
        app:layout_constraintRight_toRightOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="30dp"
        android:background="#FF7D7D7D"/>

    <LinearLayout
        android:id="@+id/mail_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mail_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:textColor="#7D7D7D"
            android:textSize="12sp"
            android:fontFamily="@font/dm_sans_medium"/>

        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_id"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/dm_sans_medium"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gender_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mail_linear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gender_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="#7D7D7D"
            android:textSize="12sp"
            android:fontFamily="@font/dm_sans_medium"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/dm_sans_medium"
            android:textStyle="bold"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="0.001dp"
        app:layout_constraintLeft_toLeftOf="@id/name"
        app:layout_constraintRight_toRightOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/gender_linear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="30dp"
        android:background="#FF7D7D7D"/>

    <LinearLayout
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/green_bg"
        android:padding="7dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/acc_bal_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_balance"
            android:textColor="#FFFFFFFF"
            android:textSize="12sp"
            android:fontFamily="@font/dm_sans_medium"/>

        <TextView
            android:id="@+id/acc_bal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1000"
            android:textSize="12sp"
            android:background="@drawable/white_bg"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/dm_sans_medium"
            android:textStyle="bold"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/transfer_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Transfer Money"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        android:drawableEnd="@drawable/ic_baseline_payment_24"
        android:paddingEnd="40dp"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.5"
        android:padding="18dp"
        android:textColor="@color/white"
        android:background="@drawable/transfer_money"/>



</androidx.constraintlayout.widget.ConstraintLayout>