<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_gender"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="15dp"
            android:padding="10dp"
            android:background="@drawable/circle_shape"
            android:src="@drawable/man"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintLeft_toRightOf="@id/img_gender"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_gender"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/dm_sans_medium"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="0.0001dp"
            app:layout_constraintLeft_toLeftOf="@id/name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginEnd="40dp"
            android:background="#FF7D7D7D"/>

        <TextView
            android:id="@+id/acc_bal_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_balance"
            app:layout_constraintLeft_toLeftOf="@id/name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintBottom_toBottomOf="@id/img_gender"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.4"
            android:textColor="#7D7D7D"
            android:textSize="12sp"
            android:fontFamily="@font/dm_sans_medium"/>

        <TextView
            android:id="@+id/acc_bal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1000"
            app:layout_constraintLeft_toRightOf="@id/acc_bal_txt"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintBottom_toBottomOf="@id/img_gender"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.4"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/dm_sans_medium"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/next_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_baseline_navigate_next_24"
            app:layout_constraintLeft_toRightOf="@id/divider"
            app:layout_constraintTop_toTopOf="@id/divider"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintRight_toRightOf="parent"
            app:tint="#FF7D7D7D"
            android:layout_marginEnd="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>