<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_gender"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.4"
            android:layout_marginStart="15dp"
            android:padding="10dp"
            android:background="@drawable/circle_shape"
            android:src="@drawable/man"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/towards"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/next"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tran_amt"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintHorizontal_bias="0.5"/>

        <ImageView
            android:id="@+id/img_gender_1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="@id/img_gender"
            app:layout_constraintBottom_toBottomOf="@id/img_gender"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="0.2"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            android:background="@drawable/circle_shape"
            android:src="@drawable/man"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/img_gender_1"
            app:layout_constraintTop_toBottomOf="@id/img_gender"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="1"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/dm_sans_medium"
            android:textSize="13sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/name_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintLeft_toRightOf="@id/img_gender"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_gender_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="1"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/dm_sans_medium"
            android:textSize="13sp"
            android:textColor="@color/black"/>



        <TextView
            android:id="@+id/tran_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_amount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintVertical_bias="0.7"
            android:textColor="#7D7D7D"
            android:textSize="12sp"
            android:fontFamily="@font/dm_sans_medium"/>

        <TextView
            android:id="@+id/amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1000"
            app:layout_constraintLeft_toRightOf="@id/tran_amt"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tran_amt"
            app:layout_constraintBottom_toBottomOf="@id/tran_amt"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.5"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/dm_sans_medium"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_success"
            android:fontFamily="@font/dm_sans_medium"
            android:textColor="@color/white"
            android:padding="5dp"
            android:textSize="11sp"
            app:layout_constraintVertical_bias="1"
            android:background="@drawable/green_bg_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/towards"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>