<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f5fa"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bank_icon"
        app:tint="#0f0f11"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/bank"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.15"/>

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans_medium"
        android:paddingStart="10dp"
        android:text="@string/welcome_to"
        android:textColor="#7c8b97"
        android:textSize="33sp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bank_icon"
        app:layout_constraintTop_toBottomOf="@+id/bank_icon" />

    <TextView
        android:id="@+id/captial_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans_medium"
        android:paddingStart="10dp"
        android:textStyle="normal"
        android:text="Capital Bank"
        android:textColor="#7c8b97"
        android:textSize="33sp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bank_icon"
        app:layout_constraintTop_toBottomOf="@+id/welcome_msg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/users_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/users"
        android:textColor="#f4f5fa"
        android:fontFamily="@font/dm_sans_medium"
        android:background="@drawable/users_btn"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintLeft_toLeftOf="@id/welcome_msg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/captial_txt"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/transactions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/transactions"
        android:textColor="#f4f5fa"
        android:textStyle="bold"
        android:backgroundTint="#f03226"
        android:background="@drawable/users_btn"
        android:layout_marginEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="#f03226"
        android:shadowRadius="40"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintLeft_toLeftOf="@id/welcome_msg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/users_btn"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>