<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_gender"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="15dp"
            android:padding="10dp"
            android:background="@drawable/circle_shape"
            android:src="@drawable/man"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintLeft_toRightOf="@id/img_gender"
            app:layout_constraintRight_toLeftOf="@id/btn"
            app:layout_constraintTop_toTopOf="@id/img_gender"
            app:layout_constraintBottom_toBottomOf="@id/img_gender"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginLeft="20dp"
            app:layout_constraintVertical_bias="0.5"
            android:fontFamily="@font/dm_sans_medium"
            android:textSize="15sp"
            android:textColor="@color/black"/>


        <LinearLayout
            android:id="@+id/btn"
            android:layout_width="60dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginLeft="25dp"
            android:background="#f03226">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/transfer_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/transfer"
                    app:tint="@color/white"
                    android:textAlignment="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintVertical_bias="0.35"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_now"
                    android:textSize="11sp"
                    android:textAlignment="center"
                    android:fontFamily="@font/dm_sans_medium"
                    app:layout_constraintVertical_bias="0.1"
                    app:layout_constraintTop_toBottomOf="@id/transfer_btn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/white"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>