<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoneyEnteringActivity">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:tint="#AAAAAA"
        android:src="@drawable/cross"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="₹ "
        android:textSize="40sp"
        android:textColor="#28282a"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/amount"
        app:layout_constraintTop_toTopOf="@id/amount"
        app:layout_constraintBottom_toBottomOf="@id/amount"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0.5"/>

    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="0"
        android:minWidth="48dp"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="#28282a"
        android:textSize="65sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_gender_1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.2"
        android:padding="10dp"
        android:background="@drawable/circle_shape"
        android:src="@drawable/man"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/img_gender_2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.2"
        android:padding="10dp"
        android:background="@drawable/circle_shape"
        android:src="@drawable/man"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/between"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="@id/img_gender_1"
        app:layout_constraintBottom_toBottomOf="@id/img_gender_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        android:padding="10dp"
        android:src="@drawable/next"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/name_1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:fontFamily="@font/dm_sans_medium"
        app:layout_constraintTop_toBottomOf="@id/img_gender_1"
        app:layout_constraintLeft_toLeftOf="@id/img_gender_1"
        app:layout_constraintRight_toRightOf="@id/img_gender_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:flow_firstHorizontalBias="0"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/name_2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/big_name"
        android:textAlignment="center"
        android:fontFamily="@font/dm_sans_medium"
        app:layout_constraintTop_toTopOf="@id/name_1"
        app:layout_constraintLeft_toLeftOf="@id/img_gender_2"
        app:layout_constraintRight_toRightOf="@id/img_gender_2"
        app:layout_constraintBottom_toBottomOf="@id/name_1"
        app:layout_constraintVertical_bias="0.5"
        app:flow_firstHorizontalBias="0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="50dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:tint="@color/white"
        app:fabSize="auto"
        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintHorizontal_bias="0.9"
        tools:ignore="SpeakableTextPresentCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>